content additions and new pages(how it works)

--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html data-wf-page="5d1978a7f3be3c3e6c8ee09f" data-wf-site="5d11db7bf9a609f7ab646d8c">
 <head>
   <meta charset="utf-8">
-  <title>Consulting Services</title>
+  <title>Services</title>
   <meta content="Some keywords that best describes your site" name="description">
   <meta content="Virtual Assistance" property="og:title">
   <meta content="Virtual Assistance, Outsorcing" property="og:description">
@@ -12,6 +12,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/gresk.webflow.css" rel="stylesheet" type="text/css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:regular,700,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -30,7 +31,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">Impact</a></li>
-        <li><a href="consulting-services.html">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact-us.html">Contact</a></li>
       </ul>
@@ -51,68 +52,109 @@
     </div>
     <div class="container">
       <div class="col lg-12">
-        <div class="ultra-big-fat-paragraph">We bring deep, functional expertise, but are known for our holistic perspective: we capture value across boundaries and between the silos of any organization</div>
+        <div class="ultra-big-fat-paragraph"> Get the help you need and boost your
+        business operations with the best trained, qualified and experienced African assistants.
+        </div>
       </div>
     </div>
   </div>
+
+
+  <div class="section">
+    <!-- <div class="container margin-bottom">
+      <div class="col lg-4 sm-12">
+        <div class="pre-title">How we can help</div>
+        <p class="heading-2">Digital Customer Experience Transformation</p>
+      </div>
+      <div class="col flow">
+        <p class="fat-paragraph margin-top">Gresk helps you transform your customer experiences and deliver them at
+          radically lower cost. It starts by simplifying your core business and digitizing it where it matters. Result:
+          digitally infused experiences that are easier and less expensive to sell and support.</p>
+      </div>
+    </div> -->
+    <div class="container extended bg-accent vertical-padding-large">
+      <div class="container">
+        <div class="col lg-4 xs-12 md-12">
+          <div class="pre-title">What we do</div>
+          <div class="title-3">Our Services</div>
+        </div>
+        <div class="col lg-4 xs-12 md-12 magin-bottom-large">
+          <h4 class="margin-bottom services-title">Colibri Marketing Assistant</h4>
+          <div class="services-list margin-bottom-large">Marketing Strategies<br>Market Research<br>UX Research<br>Email Marketing
+            <br>Content Writing<br>Social Media Management<br>Audio, Video & multimedia</div>
+          <h4 class="margin-bottom services-title">Colibri Sale Assistant</h4>
+          <div class="services-list">Lead generation<br>Telemarketing<br>Prospect and/or client follow up<br>
+            Prepare contracts and proposals<br>Customer service<br>Deal with sales administration<br>Chat support</div>
+        </div>
+        <div class="col lg-4 xs-12 md-12">
+          <h4 class="margin-bottom services-title">Colibri Administrative Assistant</h4>
+          <div class="services-list margin-bottom-large">Meeting preparation<br>Research &amp; reports 
+            <br>Calendar management<br>Virtual receptionist<br>Appointment setting<br>Email correspondence<br>Document formatting</div>
+          <h4 class="margin-bottom services-title">Virtual Technical Assistant</h4>
+          <div class="services-list">Web application<br>Web copywriting
+            <br>UI Design<br>Technical support<br>Security<br>Quality Assurance &amp; Software Testing<br></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <div class="section vertical-padding-large">
     <div class="container">
       <div class="container">
         <div class="col">
           <div class="w-layout-grid service-grid">
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Advanced Analytics</h4>
-              <p class="service-description margin-bottom">Strategy experience and analytical expertise combine to enable decision making and create value</p>
+              <h4 class="services-title">Blogs posts</h4>
+              <p class="service-description margin-bottom">We create original, quality, and compelling content for you using user-centric research to understand your audience and
+              convey information to them in your brand's voice and style.</p>
             </div>
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Agile</h4>
-              <p class="service-description margin-bottom">Solve complex problems fast with small, cross-functional teams that use a structured, iterative approach to get results</p>
+              <h4 class="services-title">Product description</h4>
+              <p class="service-description margin-bottom">We create enriched product pages with keyword-rich product descriptions that improve organic search rankings and
+              click-through rates, thereby influencing purchasing behavior and increasing the conversion rate of your visitors.</p>
             </div>
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Change Management</h4>
-              <p class="service-description margin-bottom">Predicting, measuring and managing risk associated with change management</p>
+              <h4 class="services-title">Stories</h4>
+              <p class="service-description margin-bottom">Our creative and very experienced editors write for your exciting, innovative, and emotional stories using keywords, to
+              create empathy for your brand among your audience and increase your SEO on search engines.</p>
             </div>
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Corporate Finance</h4>
-              <p class="service-description margin-bottom">Linking corporate strategy, financial strategy, transactions and a capital markets perspective to create value</p>
+              <h4 class="services-title">Academic writing</h4>
+              <p class="service-description margin-bottom">we support you in the drafting and correction of your study research documents in order to help you produce a document
+              of high quality and excellent technicality.</p>
             </div>
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Customer Strategy and Marketing</h4>
-              <p class="service-description margin-bottom">In-depth customer insights combined with economic and operational fundamentals</p>
+              <h4 class="services-title">Translation</h4>
+              <p class="service-description margin-bottom">We have credentialed translators in various verticals who can precisely translate in your brand voice and style.</p>
             </div>
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Digital</h4>
-              <p class="service-description margin-bottom">Deliver on core strategy, delight customers and operate smarter and faster</p>
+              <h4 class="services-title">Sorting documents</h4>
+              <p class="service-description margin-bottom">Our community of Colibri workers help you sort your documents for better organization and more efficiency within your
+              teams.</p>
             </div>
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128.svg" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Information Technology</h4>
-              <p class="service-description margin-bottom">Realizing the full potential of IT resources, investments and assets</p>
+              <h4 class="services-title">Product catalogue enrichment:</h4>
+              <p class="service-description margin-bottom">Our Colibri assistants take care to search and collect products online in record time to help you enrich your catalog
+              with the names, photos, key characteristics of your products and submit them to you in the medium of your choice.</p>
             </div>
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Merger &amp; Acquisition</h4>
-              <p class="service-description margin-bottom">An integrated approach linking acquisition strategy, due diligence and merger integration</p>
+              <h4 class="services-title">Documents collection</h4>
+              <p class="service-description margin-bottom">Our community of Colibri workers is responsible for finding and collecting the necessary documents for you quickly and
+              efficiently.</p>
             </div>
             <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Organization</h4>
+              <h4 class="services-title">Website Development/update</h4>
               <p class="service-description margin-bottom">Ensuring the entire organization is aligned and set up to successfully deliver on the company&#x27;s objectives</p>
             </div>
-            <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Sustainability</h4>
-              <p class="service-description margin-bottom">Identifying opportunities and developing business cases to make sustainability a source of on-going value</p>
-            </div>
-            <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Performance Improvement</h4>
-              <p class="service-description margin-bottom">Enabling companies to grow revenue, improve margins and reposition quickly</p>
-            </div>
-            <div class="service-grid-item margin-bottom-large"><img src="http://via.placeholder.com/128x128" width="128" alt="" class="margin-bottom display-block">
-              <h4 class="services-title">Transformation</h4>
-              <p class="service-description margin-bottom">A cross-functional effort to alter the financial, operational and strategic trajectory of a business</p>
-            </div>
+         
           </div>
         </div>
       </div>
     </div>
   </div>
+
+
   <div class="section section-footer">
     <div class="container footer-top">
       <div class="col flow">
