blog posts added

--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
     <a href="single-post.html" class="link-block w-inline-block">
       <div class="container main-blog-top">
         <div class="col main-blog-title xs-12">
-          <h2 class="heading-omega main-blog-top">5 Business Management Strategies We Learned as a B Corp</h2>
+          <h2 class="heading-omega main-blog-top">10 Tasks you should be outsourcing regularly</h2>
         </div>
       </div>
       <div class="container margin-bottom">
@@ -59,17 +59,20 @@
     </a>
     <div class="container">
       <div class="col flex">
-        <div class="blog-item-date">Sep 19</div>
+        <div class="blog-item-date">April 19</div>
         <div class="blog-text xs-12">
-          <p class="blog-excerpt margin-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere...</p><a href="single-post.html" class="read-more">Read More</a></div>
+          <p class="blog-excerpt margin-bottom">For a large corporation, a small business or a solopreneur, the demands of managing the day-to-day running of your
+          business can seem overwhelming. You might be hard-pressed with time, money, and human resource. You might also find
+          yourself being more interested in the creative side of your business. This should...
+         </p><a href="single-post.html" class="read-more">Read More</a></div>
       </div>
     </div>
   </div>
   <div class="blog-item">
-    <a href="single-post.html" class="link-block w-inline-block">
+    <a href="single-post2.html" class="link-block w-inline-block">
       <div class="container main-blog-top">
         <div class="col main-blog-title xs-12">
-          <h2 class="heading-omega main-blog-top">Technology Business Management: The CIO’s New Survival Imperative</h2>
+          <h2 class="heading-omega main-blog-top">How Africans in the diaspora can benefit from working with VA's in Africa</h2>
         </div>
       </div>
       <div class="container margin-bottom">
@@ -80,15 +83,16 @@
       <div class="col flex">
         <div class="blog-item-date">Sep 19</div>
         <div class="blog-text">
-          <p class="blog-excerpt margin-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere...</p><a href="single-post.html" class="read-more">Read More</a></div>
+          <p class="blog-excerpt margin-bottom"> African business owners and entrepreneurs in the diaspora need to grow their business one way or another. They need to
+          boost productivity as they free up valuable time for themselves and their team of employees or workers. They also need...</p><a href="single-post2.html" class="read-more">Read More</a></div>
       </div>
     </div>
   </div>
   <div class="blog-item">
-    <a href="single-post.html" class="link-block w-inline-block">
+    <a href="single-post3.html" class="link-block w-inline-block">
       <div class="container main-blog-top">
         <div class="col main-blog-title xs-12">
-          <h2 class="heading-omega main-blog-top">6 Reasons to Study Finance Management &amp; Entrepreneur at Djavaweb</h2>
+          <h2 class="heading-omega main-blog-top">Common mistakes to avoid when hiring a Virtial Assistant</h2>
         </div>
       </div>
       <div class="container margin-bottom">
@@ -99,48 +103,12 @@
       <div class="col flex">
         <div class="blog-item-date">Sep 19</div>
         <div class="blog-text">
-          <p class="blog-excerpt margin-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere...</p><a href="single-post.html" class="read-more">Read More</a></div>
+          <p class="blog-excerpt margin-bottom">Hiring a virtual assistant the right way is critical to ensuring that you reap all the benefits that come with them.
+          Otherwise, they might become another problem you may have to solve. These are some general...</p><a href="single-post3.html" class="read-more">Read More</a></div>
       </div>
     </div>
   </div>
-  <div class="blog-item">
-    <a href="single-post.html" class="link-block w-inline-block">
-      <div class="container main-blog-top">
-        <div class="col main-blog-title xs-12">
-          <h2 class="heading-omega main-blog-top">How to communicate effectively as a leader</h2>
-        </div>
-      </div>
-      <div class="container margin-bottom">
-        <div class="col lg-12"><img src="http://via.placeholder.com/1168x710" srcset="http://via.placeholder.com/1168x710 500w, http://via.placeholder.com/1168x710 800w, images/http://via.placeholder.com/1168x710 1080w, http://via.placeholder.com/1168x710 1280w" sizes="100vw" alt=""></div>
-      </div>
-    </a>
-    <div class="container">
-      <div class="col flex">
-        <div class="blog-item-date">Sep 19</div>
-        <div class="blog-text">
-          <p class="blog-excerpt margin-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere...</p><a href="single-post.html" class="read-more">Read More</a></div>
-      </div>
-    </div>
-  </div>
-  <div class="blog-item">
-    <a href="single-post.html" class="link-block w-inline-block">
-      <div class="container main-blog-top">
-        <div class="col main-blog-title xs-12">
-          <h2 class="heading-omega main-blog-top">A Three-Step Framework For Solving Problems</h2>
-        </div>
-      </div>
-      <div class="container margin-bottom">
-        <div class="col lg-12"><img src="http://via.placeholder.com/1168x710" srcset="http://via.placeholder.com/1168x710 500w, http://via.placeholder.com/1168x710 800w, images/http://via.placeholder.com/1168x710 1080w, http://via.placeholder.com/1168x710 1280w" sizes="100vw" alt=""></div>
-      </div>
-    </a>
-    <div class="container">
-      <div class="col flex">
-        <div class="blog-item-date">Sep 19</div>
-        <div class="blog-text">
-          <p class="blog-excerpt margin-bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere...</p><a href="single-post.html" class="read-more">Read More</a></div>
-      </div>
-    </div>
-  </div>
+
   <div class="paging">
     <div class="container">
       <div class="paging-container">
