--- a/works.html
+++ b/works.html
@@ -39,27 +39,14 @@
                     <img src="img/colibri-logo.svg" alt="">
                 </a>
             </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">Impact</a></li>
-                <div class="dropdown">
-                    <li><a href="services.html">Services</a></li>
-                    <div class="dropdown-content">
-                        <li><a href="blog.html">One time service</a></li>
-                        <li><a href="blog.html">Virtual Assistance service</a></li>
-                        <li><a href="blog.html">Download our services Brochure</a></li>
-                    </div>
-                </div>
-                <li><a href="blog.html">Blog</a></li>
-                <div class="dropdown">
-                    <li><a href="contact-us.html">Contact</a></li>
-                    <div class="dropdown-content">
-                        <li><a href="faq.html">FAQ</a></li>
-                    </div>
-                </div>
-
-
-            </ul>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">Impact</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="works.html">Process</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact-us.html">Contact</a></li>
+        </ul>
             <div class="burger">
                 <div class="line1"></div>
                 <div class="line2"></div>
@@ -86,9 +73,9 @@
 <div class="container my-5">
     <section id="steps">
         <div class="text-center mb-2">
-            <span>STEPS</span>
+            <span>FOR A COLIBRI ASSISTANT</span>
 
-            <h3 class="font-weight-bold display-4 ">How It <span style=" color:#FA525D">Works?</span></h3>
+            <h1 class="font-weight-bold display-4 ">How It <span style=" color:#FA525D">Works?</span></h1>
         </div>
         <div class="row">
             <div class="col-md-3">
@@ -108,23 +95,10 @@
                 <div class="bg-light position-relative px-3 my-5">
                     <div class="font-weight-bold circle text-white rounded-circle d-flex align-items-center justify-content-center mx-auto position-relative border border-white"
                         style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #FA525D">
-                        1
-                    </div>
-                    <div class="px-3 text-center pb-3">
-                        <h4>Get a quote</h4>
-                        <p class="font-weight-light my-3">Lorem ipsum dolor sit consectetur adipisicing elit. Alias amet
-                            deleniti et fugit iusto nesciunt.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="bg-light position-relative px-3 my-5">
-                    <div class="font-weight-bold circle text-white rounded-circle d-flex align-items-center justify-content-center mx-auto position-relative border border-white"
-                        style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #FA525D">
                         2
                     </div>
                     <div class="px-3 text-center pb-3">
-                        <h4>Execution</h4>
+                        <h4>Get ideal match</h4>
                         <p class="font-weight-light my-3">Lorem ipsum dolor sit consectetur adipisicing elit. Alias amet
                             deleniti et fugit iusto nesciunt.</p>
                     </div>
@@ -137,7 +111,20 @@
                         3
                     </div>
                     <div class="px-3 text-center pb-3">
-                        <h4>Validation</h4>
+                        <h4>Confirm  Assistant</h4>
+                        <p class="font-weight-light my-3">Lorem ipsum dolor sit consectetur adipisicing elit. Alias amet
+                            deleniti et fugit iusto nesciunt.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="bg-light position-relative px-3 my-5">
+                    <div class="font-weight-bold circle text-white rounded-circle d-flex align-items-center justify-content-center mx-auto position-relative border border-white"
+                        style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #FA525D">
+                        4
+                    </div>
+                    <div class="px-3 text-center pb-3">
+                        <h4>Work begins</h4>
                         <p class="font-weight-light my-3">Lorem ipsum dolor sit consectetur adipisicing elit. Alias amet
                             deleniti et fugit iusto nesciunt.</p>
                     </div>
@@ -154,9 +141,9 @@
 <div class="container my-5">
     <section id="steps">
         <div class="text-center mb-2">
-            <span>STEPS</span>
+            <span>TO OUTSOURCE A PROJECT</span>
 
-            <h3 class="font-weight-bold display-4 ">How It <span style=" color:#FA525D">Works?</span></h3>
+            <h1 class="font-weight-bold display-4 ">How It <span style=" color:#FA525D">Works?</span></h1>
         </div>
         <div class="row">
             <div class="col-md-3">
@@ -175,8 +162,8 @@
             <div class="col-md-3">
                 <div class="bg-light position-relative px-3 my-5">
                     <div class="font-weight-bold circle text-white rounded-circle d-flex align-items-center justify-content-center mx-auto position-relative border border-white"
-                        style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #FA525D">
-                        1
+                        style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #1e3555">
+                        2
                     </div>
                     <div class="px-3 text-center pb-3">
                         <h4>Get a quote</h4>
@@ -188,7 +175,7 @@
             <div class="col-md-3">
                 <div class="bg-light position-relative px-3 my-5">
                     <div class="font-weight-bold circle text-white rounded-circle d-flex align-items-center justify-content-center mx-auto position-relative border border-white"
-                        style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #FA525D">
+                        style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #1e3555">
                         2
                     </div>
                     <div class="px-3 text-center pb-3">
@@ -201,7 +188,7 @@
             <div class="col-md-3">
                 <div class="bg-light position-relative px-3 my-5">
                     <div class="font-weight-bold circle text-white rounded-circle d-flex align-items-center justify-content-center mx-auto position-relative border border-white"
-                        style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #FA525D">
+                        style="width: 60px;height: 60px;top: -30px;border-width: 4px !important; background-color: #1e3555">
                         3
                     </div>
                     <div class="px-3 text-center pb-3">
@@ -211,6 +198,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="hello" >
+            <a href="services.html" class="button7" style="background-color:#fa5d5b; color:#fff" >Book a call</a>
         </div>
     </section>
 
