--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
       <div class="block-post " style="background-color: rgb(255, 255, 255);">
         <div class="image-block">
           <!-- <img src="upload/others/s6.jpg" alt=""> -->
-          <img src='images/a1.jpg' alt="">
+          <img src='img/13.jpg' alt="">
         </div>
         <div class="block-content">
           <div class="container">
@@ -177,7 +177,7 @@
 
       <div class="block-post right-align">
         <div class="image-block">
-          <img src="images/a2.jpeg" alt="">
+          <img src="img/18.jpeg" alt="">
         </div>
         <div class="block-content">
           <div class="container">
@@ -197,7 +197,7 @@
       <div class="block-post">
         <div class="image-block">
           <!-- <img src="upload/others/s6.jpg" alt=""> -->
-          <img src='images/austin-distel-7uoMmzPd2JA-unsplash.jpg' alt="">
+          <img src='img/11.jpg' alt="">
         </div>
         <div class="block-content">
           <div class="container">
@@ -216,7 +216,7 @@
  </section>
 
 
-   
+   <!-- SDG -->
 
 <div class="wrapper">
   <!-- <h1>Areas of Interest</!-->
@@ -224,7 +224,7 @@
   <div class="cols">
     <div class="coll" ontouchstart="this.classList.toggle('hover');">
       <div class="cont">
-        <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+        <div class="front" style="background-image: url('img/impact05.jpeg')">
           <div class="inner">
             <p class="impact">SDG 1</p>
             <span>No poverty</span>
@@ -241,7 +241,7 @@
 
     <div class="coll" ontouchstart="this.classList.toggle('hover');">
       <div class="cont">
-        <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+        <div class="front" style="background-image: url('img/impact04.jpeg')">
           <div class="inner">
             <p class="impact">SDG 8</p>
             <span>Decent work and economic growth</span>
@@ -258,7 +258,7 @@
     </div>
     <div class="coll" ontouchstart="this.classList.toggle('hover');">
       <div class="cont">
-        <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
+        <div class="front" style="background-image: url('img/impact5.jpeg')">
           <div class="inner">
             <p class="impact">SDG 10</p>
             <span>Reduction of inequalities.</span>
@@ -301,64 +301,56 @@
   </div>  -->
 
 
-<!-- Footer session -->
+<!-- Footer -->
 <div class="section section-footer">
   <div class="container footer-top">
     <div class="col flow">
-      <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:hello@gresk.ninja"
+      <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:info@colibri.africa"
         class="email-address">info@colibri.africa</a>
+      <!-- social icons -->
+      <div class="social" style="float: right;">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-instagram"></a>
+      </div>
     </div>
-    <div class="col sm-12"><img src="images/logo2.svg" alt=""></div>
+
+
   </div>
   <div class="container">
     <div class="col flow">
-      <div>3552 Murphy Court, Building 77<br>Surabaya, East Java 60217</div>
+      <h2>About</h2>
+
+      <p style="color:white">
+        We have a Colibri assistant for you but you would never know if you do not reach out.
+        Whether you are looking to do a task, a project or you just need a virtual assistant that could be an extension
+        of
+        yourself or your team. <br> Reach out to us today.</p>
     </div>
     <div class="col flex flex-width-700">
       <div class="footer-nav-block flex xs-12">
         <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
-        <div class="footer-menu-list"><a href="#" class="footer-link-item">Term of Use</a></div>
-        <div class="footer-menu-list"><a href="#" class="footer-link-item">Privacy</a></div>
-        <div class="footer-menu-list"><a href="#" class="footer-link-item">Environmental Policy</a></div>
+        <div class="footer-menu-list"><a href="#" class="footer-link-item">FAQ</a></div>
+        <div class="footer-menu-list"><a href="#" class="footer-link-item">Impact</a></div>
+        <div class="footer-menu-list"><a href="#" class="footer-link-item">Get a Quote</a></div>
       </div>
       <div class="footer-nav-block flex xs-12">
-        <div class="footer-menu-list"><a href="#" class="footer-link-item">Industry</a></div>
-        <div class="footer-menu-list"><a href="#" class="footer-link-item">Consulting Services</a></div>
-        <div class="footer-menu-list"><a href="#" class="footer-link-item">Insight</a></div>
-        <div class="footer-menu-list"><a href="#" class="footer-link-item">Resources</a></div>
-      </div>
-      <div class="footer-nav-block flex xs-12">
-        <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
+        <div class="footer-menu-list"><a href="#" class="footer-link-item">Linkedin</a></div>
         <div class="footer-menu-list"><a href="#" class="footer-link-item">Twitter</a></div>
         <div class="footer-menu-list"><a href="#" class="footer-link-item">Instagram</a></div>
-
+        <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
       </div>
     </div>
   </div>
 </div>
-
-
-<div class="container">
-  <div class="sixteen columns">
-    <p style="text-align: center;"><small>© 2021 Colibri Africa</small></p>
-  </div>
-</div>
-</div>
-
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="js/webflow.js" type="text/javascript"></script>
 <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-
-  <script src="jss/statum-plugins.min.js"></script>
-  <script src="jss/jquery.countTo.js"></script>
-  <script src="jss/popper.js"></script>
-  <script src="jss/bootstrap.min.js"></script>
-  <script src="jss/script.js"></script>
-  <script type="text/javascript" src="js/classie.js"></script>
-  <script type="text/javascript" src="js/cbpAnimatedHeader.min.js"></script>
-
-
+<!-- partial -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 </body>
+
 </html>
