--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="container margin-bottom">
-        <div class="col lg-12"><img src="http://via.placeholder.com/1168x710" srcset="http://via.placeholder.com/1168x710 500w, http://via.placeholder.com/1168x710 800w, images/http://via.placeholder.com/1168x710 1080w, http://via.placeholder.com/1168x710 1280w" sizes="100vw" alt=""></div>
+        <div class="col lg-12"><img src="img/blog1.jpg" sizes="100vw" alt=""></div>
       </div>
     </a>
     <div class="container">
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="container margin-bottom">
-        <div class="col lg-12"><img src="http://via.placeholder.com/1168x710" srcset="http://via.placeholder.com/1168x710 500w, http://via.placeholder.com/1168x710 800w, images/http://via.placeholder.com/1168x710 1080w, http://via.placeholder.com/1168x710 1280w" sizes="100vw" alt=""></div>
+        <div class="col lg-12"><img src="img/1.jpg" sizes="100vw" alt=""></div>
       </div>
     </a>
     <div class="container">
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="container margin-bottom">
-        <div class="col lg-12"><img src="http://via.placeholder.com/1168x710" srcset="http://via.placeholder.com/1168x710 500w, http://via.placeholder.com/1168x710 800w, images/http://via.placeholder.com/1168x710 1080w, http://via.placeholder.com/1168x710 1280w" sizes="100vw" alt=""></div>
+        <div class="col lg-12"><img src="img/1.jpg" sizes="100vw" alt=""></div>
       </div>
     </a>
     <div class="container">
