--- a/services.html
+++ b/services.html
@@ -170,40 +170,56 @@
   </div>
 
 
+  <!-- Footer -->
   <div class="section section-footer">
     <div class="container footer-top">
       <div class="col flow">
-        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:hello@gresk.ninja" class="email-address">hello@gresk.ninja</a></div>
-      <div class="col sm-12"><img src="images/logo2.svg" alt=""></div>
+        <div class="heading-beta margin-bottom">Let&#x27;s Talk</div><a href="mailto:info@colibri.africa"
+          class="email-address">info@colibri.africa</a>
+        <!-- social icons -->
+        <div class="social" style="float: right;">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+          <a href="#" class="fa fa-instagram"></a>
+        </div>
+      </div>
+  
+  
     </div>
     <div class="container">
       <div class="col flow">
-        <div>3552 Murphy Court, Building 77<br>Surabaya, East Java 60217</div>
-      </div>
+        <h2>About</h2>
+  
+        <p style="color:white">
+          We have a Colibri assistant for you but you would never know if you do not reach out.
+          Whether you are looking to do a task, a project or you just need a virtual assistant that could be an extension
+          of
+          yourself or your team. <br> Reach out to us today.</p>
+          </div>
       <div class="col flex flex-width-700">
         <div class="footer-nav-block flex xs-12">
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Contact Us</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Term of Use</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Privacy</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Environmental Policy</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">FAQ</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Impact</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Get a Quote</a></div>
         </div>
         <div class="footer-nav-block flex xs-12">
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Industry</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Consulting Services</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Insight</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Resources</a></div>
-        </div>
-        <div class="footer-nav-block flex xs-12">
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Linkedin</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Twitter</a></div>
           <div class="footer-menu-list"><a href="#" class="footer-link-item">Instagram</a></div>
-          <div class="footer-menu-list"><a href="#" class="footer-link-item">Youtube</a></div>
+          <div class="footer-menu-list"><a href="#" class="footer-link-item">Facebook</a></div>
         </div>
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.4.1.min.220afd743d.js" type="text/javascript"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-</body>
-</html>
+  <!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  
+  </body>
+  
+  </html>
