sdg change to 4

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       </div>
       <div class="col flex margin-top-large">
         <div class="parallax1">
-          <img src="img/18.jpg" width="640" data-w-id="d5026328-62c9-4597-b232-f53b2848b10b" alt="" class="parallax-img1"></div>
+          <img src="img/9.jpg" width="640" data-w-id="d5026328-62c9-4597-b232-f53b2848b10b" alt="" class="parallax-img1"></div>
         <div class="parallax2">
-          <img src="img/14.jpg" width="640" data-w-id="1ee2777e-adde-eca7-8782-a864175cd16d" alt="" class="parallax-img2"></div>
+          <img src="img/16.jpeg" width="640" data-w-id="1ee2777e-adde-eca7-8782-a864175cd16d" alt="" class="parallax-img2"></div>
       </div>
     </div>
   </div>
