changed header images

--- a/contact-us.html
+++ b/contact-us.html
@@ -47,7 +47,7 @@
   
     </div>
   </div>
-  <div class="header-section">
+  <div class="contact-section">
     <div class="container header-container">
       <div class="col">
         <h1 class="heading-beta">Contact Us</h1>
