--- a/services.html
+++ b/services.html
@@ -46,7 +46,7 @@
   
     </div>
   </div>
-  <div class="header-section">
+  <div class="service-header">
     <div class="container header-container">
       <div class="col">
         <h1 class="heading-beta">Our Services</h1>
