--- a/blog.html
+++ b/blog.html
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="container margin-bottom">
-        <div class="col lg-12"><img src="img/blog1.jpg" sizes="100vw" alt=""></div>
+        <div class="col lg-12"><img src="img/30.jpeg" sizes="100vw" alt=""></div>
       </div>
     </a>
     <div class="container">
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="container margin-bottom">
-        <div class="col lg-12"><img src="img/1.jpg" sizes="100vw" alt=""></div>
+        <div class="col lg-12"><img src="img/40.jpeg" sizes="100vw" alt=""></div>
       </div>
     </a>
     <div class="container">
